Fri Sep 24 18:08:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Extension/Extension_Container.idl:
        * ciao/Contexts/Extension/Extension_Context_T.h:
        * ciao/Contexts/Extension/Extension_Context_T.cpp:
        * ciao/Servants/Extension/Servant_Impl_T.h:
        * ciao/Servants/Extension/Servant_Impl_T.cpp:
        * ciao/Servants/Home_Servant_Impl_T.cpp:
          Another set of changes for extension components, more will follow
          next week together with some changes to all mpc files

Fri Sep 24 14:14:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Contexts/Extension/Extension_Context_T.h:
        * ciao/Contexts/Extension/Extension_Context_T.cpp:
        * ciao/Contexts/Session/Session_Context_T.h:
        * ciao/Contexts/Session/Session_Context_T.cpp:
        * ciao/Contexts/Extension/ExtensionContext_T.h:
        * ciao/Contexts/Extension/ExtensionContext_T.cpp:
        * ciao/Contexts/Session/Context_Impl_T.h:
        * ciao/Contexts/Session/Context_Impl_T.cpp:
          Renamed files and started with extension context and container

Fri Sep 24 13:40:16 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * examples/BasicSP/RepoMan_Usage.html:
          Update regarding ORB services rename action

Fri Sep 24 12:49:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Common/CIF_Common.h:
        * tests/CIF/Common/CIF_Common.cpp:
        * tests/CIF/Component/CIF_Component.idl:
        * tests/CIF/Component/CIF_Component.mpc:
        * tests/CIF/Component/CIF_Component_exec.h:
        * tests/CIF/Component/CIF_Component_exec.cpp:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Added explicit tests for _get_component.

Fri Sep 24 11:51:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ami4ccm_lem_stub.mpb:
        * MPC/config/ciao_servant.mpb:
        * ciao/Containers/Containers.mpc: